@@ -4,8 +4,8 @@ import com.example.mdmggreal.global.exception.CustomException;
 import com.example.mdmggreal.global.exception.ErrorCode;
 import com.example.mdmggreal.global.security.JwtUtil;
 import com.example.mdmggreal.hashtag.entity.Hashtag;
-import com.example.mdmggreal.hashtag.repository.HashtagRepository;
 import com.example.mdmggreal.hashtag.repository.HashtagQueryRepository;
+import com.example.mdmggreal.hashtag.repository.HashtagRepository;
 import com.example.mdmggreal.ingameinfo.dto.response.InGameInfoResponse;
 import com.example.mdmggreal.ingameinfo.entity.InGameInfo;
 import com.example.mdmggreal.ingameinfo.repository.InGameInfoRepository;
@@ -16,8 +16,8 @@ import com.example.mdmggreal.post.dto.PostDTO;
 import com.example.mdmggreal.post.dto.request.PostAddRequest;
 import com.example.mdmggreal.post.entity.Post;
 import com.example.mdmggreal.post.entity.type.VideoType;
-import com.example.mdmggreal.post.repository.PostRepository;
 import com.example.mdmggreal.post.repository.PostQueryRepository;
+import com.example.mdmggreal.post.repository.PostRepository;
 import com.example.mdmggreal.posthashtag.entity.PostHashtag;
 import com.example.mdmggreal.posthashtag.repository.PostHashtagRepository;
 import com.example.mdmggreal.s3.service.S3Service;
@@ -29,7 +29,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.example.mdmggreal.global.exception.ErrorCode.INVALID_USER_ID;
 
@@ -58,10 +57,15 @@ public class PostService {
 
         postAddRequest.inGameInfoRequests().forEach(inGameInfo -> inGameInfoRepository.save(InGameInfo.of(inGameInfo, post)));
         postAddRequest.hashtag().forEach(name -> {
-            Hashtag hashtag = hashtagRepository.findByName(name).orElseThrow(
-                    () -> new CustomException(ErrorCode.HASHTAGNAME_NOT_MATCH)
-            );
-            postHashtagRepository.save(PostHashtag.of(post, hashtag));
+            if(hashtagRepository.findByName(name).isPresent()) {
+                Hashtag hashtag = hashtagRepository.findByName(name).get();
+                postHashtagRepository.save(PostHashtag.of(post, hashtag));
+            } else {
+                Hashtag hashtag = Hashtag.from(name);
+                Hashtag savedHashtag = hashtagRepository.save(hashtag);
+                postHashtagRepository.save(PostHashtag.of(post, savedHashtag));
+            }
+
         });
     }
 
@@ -74,13 +78,13 @@ public class PostService {
 
     public List<PostDTO> getPostsOrderByCreatedDateTime(String token, String orderBy, String keyword) {
         List<Post> posts = postQueryRepository.getPostList(orderBy, keyword);
-        return posts.stream().map(post -> createPostDTO(post, token)).collect(Collectors.toList());
+        return posts.stream().map(post -> createPostDTO(post, token)).toList();
     }
 
     public List<PostDTO> getPostsByMember(Long memberId) {
         Member loginMember = getMemberByMemberId(memberId);
         List<Post> posts = postQueryRepository.getPostsMember(loginMember.getId());
-        return posts.stream().map(post -> createPostDTO(post, loginMember.getMobile())).collect(Collectors.toList());
+        return posts.stream().map(post -> createPostDTO(post, loginMember.getMobile())).toList();
     }
 
     private PostDTO createPostDTO(Post post, String token) {
@@ -91,7 +95,7 @@ public class PostService {
             isVote = voteQueryRepository.existsVoteByMemberId(post.getId(), loginMember.getId());
         }
         List<Hashtag> hashtags = hashtagQueryRepository.getListHashtagByPostId(post.getId());
-        List<InGameInfoResponse> inGameInfoResponses = inGameInfoRepository.findByPostId(post.getId()).stream().map(InGameInfoResponse::of).collect(Collectors.toList());
+        List<InGameInfoResponse> inGameInfoResponses = inGameInfoRepository.findByPostId(post.getId()).stream().map(InGameInfoResponse::of).toList();
         return PostDTO.of(MemberDTO.from(post.getMember()), post, hashtags, inGameInfoResponses, isVote);
     }
 
